--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,46 +4,31 @@
     "type": "split",
     "children": [
       {
-        "id": "9a08191831037e25",
+        "id": "f315c33a46a81442",
         "type": "leaf",
-        "dimension": 25.786924939467312,
+        "dimension": 54.80631276901004,
         "pinned": true,
+        "state": {
+          "type": "markdown",
+          "state": {
+            "file": "mobile/ios/lifecycle/network_calls.md",
+            "mode": "preview",
+            "source": false
+          },
+          "pinned": true
+        }
+      },
+      {
+        "id": "a91138c918cff017",
+        "type": "leaf",
+        "dimension": 45.19368723098996,
         "state": {
           "type": "markdown",
           "state": {
             "file": "mobile/ios/swift/arrays.md",
             "mode": "source",
             "source": false
-          },
-          "pinned": true
-        }
-      },
-      {
-        "id": "6409a75e0bbe583d",
-        "type": "leaf",
-        "dimension": 25.786924939467312,
-        "state": {
-          "type": "markdown",
-          "state": {
-            "file": "mobile/ios/library/rxSwift/documentation.md",
-            "mode": "source",
-            "source": false
           }
-        }
-      },
-      {
-        "id": "f315c33a46a81442",
-        "type": "leaf",
-        "dimension": 48.426150121065376,
-        "pinned": true,
-        "state": {
-          "type": "markdown",
-          "state": {
-            "file": "mobile/ios/lifecycle/network_calls.md",
-            "mode": "source",
-            "source": false
-          },
-          "pinned": true
         }
       }
     ],
@@ -71,7 +56,7 @@
             "state": {
               "type": "search",
               "state": {
-                "query": "enum",
+                "query": "completion",
                 "matchingCase": false,
                 "explainSearch": false,
                 "collapseAll": false,
@@ -88,11 +73,12 @@
               "state": {}
             }
           }
-        ]
+        ],
+        "currentTab": 1
       }
     ],
     "direction": "horizontal",
-    "width": 255.00556182861328
+    "width": 100
   },
   "right": {
     "id": "13f2ec0339a31543",
@@ -108,7 +94,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "mobile/ios/library/rxSwift/documentation.md",
+                "file": "mobile/ios/swift/arrays.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -125,7 +111,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "mobile/ios/library/rxSwift/documentation.md",
+                "file": "mobile/ios/swift/arrays.md",
                 "linksCollapsed": true,
                 "unlinkedCollapsed": true
               }
@@ -148,7 +134,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "mobile/ios/library/rxSwift/documentation.md"
+                "file": "mobile/ios/swift/arrays.md"
               }
             }
           }
@@ -160,17 +146,17 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "6409a75e0bbe583d",
+  "active": "a91138c918cff017",
   "lastOpenFiles": [
-    "mobile/ios/swift/arrays.md",
+    "mobile/ios/swift/closure.md",
     "mobile/ios/lifecycle/network_calls.md",
-    "mobile/ios/library/rxSwift/pain_points.md",
-    "mobile/ios/swift/enum.md",
-    "Untitled.md",
-    "SUMMARY.md",
-    "mobile/ios/library/rxSwift/combination.md",
-    "mobile/ios/library/cocoapods.md",
-    "mobile/ios/lifecycle/timer.md",
-    "misc/logic/logic_gates.md"
+    "mobile/ios/ui/uitableview.md",
+    "mobile/ios/library/rxSwift/tableView.md",
+    "mobile/ios/swift/arrays.md",
+    "mobile/ios/lifecycle/thread_concurrency.md",
+    "mobile/ios/README_iOS.md",
+    "mobile/ios/lifecycle/dark_mode.md",
+    "mobile/ios/xcode/instruments.md",
+    "mobile/ios/xcode/performance.md"
   ]
 }
