more updates around iOS xcode dev - daily

--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -4,5 +4,5 @@
   "newFileLocation": "current",
   "useMarkdownLinks": true,
   "showUnsupportedFiles": true,
-  "attachmentFolderPath": "./"
+  "attachmentFolderPath": "assets"
 }
